# File-Manager

./: .gitignore  index.html  package-lock.json  package.json
src/: App.jsx  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  fs_manager.rs  main.rs
src-tauri/src/commands/: content_management.rs  dialogs.rs  execution.rs  file_operations.rs  import_export.rs  mod.rs  project_management.rs  sync.rs  types.rs  utilities.rs  utils.rs  web_scraping.rs
src/components/: ClientManager.jsx  CodeRunner.jsx  DataFilePreview.jsx  DebugPanel.jsx  EnhancedFileTree.jsx  FileDetails.jsx  FileDownloadManager.jsx  FileEditor.jsx  FileSyncButton.jsx  FileTemplates.jsx  FileTree.jsx  FileUploadManager.jsx  FolderContent.jsx  MainPanel.jsx  ProjectTemplates.jsx  Sidebar.jsx  Toolbar.jsx
src/components/CodeRunner/: ExecutionControls.jsx  ExecutionHistory.jsx  ExecutionQueue.jsx  OutputConsole.jsx
src/components/CodeRunner/hooks/: useCodeExecution.js  usePythonEnvironment.js
src/components/Debug/: AppInfoPanel.jsx  OrphanDetector.jsx  ProjectAnalyzer.jsx  ProjectDiagnostic.jsx  RepairTools.jsx
src/components/FileSync/: SyncControls.jsx  SyncResultsModal.jsx
src/components/FileUpload/: UploadControls.jsx  UploadHistory.jsx  UploadProgress.jsx
src/components/layout/: MainLayout.jsx  index.js
src/components/sidebar/: EmptyProjectsState.jsx  ProjectItem.jsx  ProjectList.jsx  ProjectModals.jsx  Sidebar.jsx
src/hooks/: index.js  useAppOperations.js  useAppState.js
src/hooks/operations/: useBulkOperations.js  useFileOperations.js  useNodeOperations.js  useProjectOperations.js
src/hooks/utils/: pathUtils.js
src/utils/: fileIcons.js
(+14 files in other folders)
