[package]
name = "file-manager-app"
version = "0.1.0"
description = "A Tauri File Management App"
authors = ["Your Name"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["dialog-all", "fs-all", "path-all"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tempfile = "3.8.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
